[gd_scene load_steps=7 format=3 uid="uid://dw55xl8ictcsy"]

[ext_resource type="Script" path="res://assets/scripts/potion_tab_choose.gd" id="1_7elte"]
[ext_resource type="Texture2D" uid="uid://c2jrkokpbwm2n" path="res://assets/sprites/tempButton.png" id="2_556le"]
[ext_resource type="Texture2D" uid="uid://d0wfj23sh0i8n" path="res://assets/sprites/potionOutline.png" id="3_30l2g"]
[ext_resource type="Texture2D" uid="uid://bwr1ng0cqs18q" path="res://assets/sprites/potionInner.png" id="4_62uap"]
[ext_resource type="Theme" uid="uid://dqeubdqhinxcb" path="res://assets/themes/recipe_text.tres" id="5_wytp0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1tml"]
size = Vector2(52, 20)

[node name="potion_tab_choose" type="Node2D"]
script = ExtResource("1_7elte")

[node name="tab" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_556le")

[node name="PotionOutline" type="Sprite2D" parent="."]
position = Vector2(-16, 0)
texture = ExtResource("3_30l2g")

[node name="Sprite2D" type="Sprite2D" parent="PotionOutline"]
modulate = Color(2.16588e-06, 0.535034, 0.535699, 1)
texture = ExtResource("4_62uap")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 632.0
offset_bottom = 312.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme = ExtResource("5_wytp0")
bbcode_enabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_l1tml")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
